--- a/index.html
+++ b/index.html
@@ -2,37 +2,32 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>자동차 제어 (후진 고정 모드)</title>
+  <title>플레이어 선택 자동차 제어</title>
   <style>
-    #car {
+    .car {
       width: 80px;
       height: 40px;
       position: absolute;
-      top: 100px;
-      left: 100px;
       transform-origin: center center;
       transition: transform 0.1s linear;
+      border: 2px solid transparent;
+    }
+    .selected {
+      border-color: red;
     }
   </style>
 </head>
 <body>
-  <img id="car" src="car.png" alt="자동차" />
-
   <script>
-    const car = document.getElementById("car");
+    const carCount = 18;
     const carWidth = 80;
     const carHeight = 40;
+    const screenWidth = 1980;
+    const screenHeight = 1080;
+    const padding = 20;
+    const cars = [];
 
-    let x = 100;
-    let y = 100;
-    let angle = 0;
-    let velocity = 0;
-    const maxSpeed = 5;
-    const acceleration = 0.1;
-    const friction = 0.05;
-    const turnSpeed = 2;
-
-    let isReversed = false;
+    let selectedCarIndex = 0;
 
     const keys = {
       forward: false,
@@ -41,8 +36,59 @@
       right: false
     };
 
+    // 자동차 생성
+    for (let i = 0; i < carCount; i++) {
+      const carEl = document.createElement("img");
+      carEl.className = "car";
+      carEl.src = `car${i + 1}.png`;
+      carEl.alt = `자동차 ${i + 1}`;
+      document.body.appendChild(carEl);
+
+      const car = {
+        el: carEl,
+        x: Math.random() * (screenWidth - 2 * (carWidth + padding)) + carWidth + padding,
+        y: Math.random() * (screenHeight - 2 * (carHeight + padding)) + carHeight + padding,
+        angle: Math.random() * 360,
+        velocity: 0,
+        isReversed: false
+      };
+
+      // 클릭하면 선택
+      carEl.addEventListener("click", () => {
+        selectedCarIndex = i;
+        updateCarSelection();
+      });
+
+      cars.push(car);
+    }
+
+    function updateCarSelection() {
+      cars.forEach((car, index) => {
+        car.el.classList.toggle("selected", index === selectedCarIndex);
+      });
+    }
+
+    updateCarSelection();
+
     document.addEventListener("keydown", (e) => {
-      switch (e.key.toLowerCase()) {
+      const key = e.key.toLowerCase();
+
+      if (e.shiftKey) {
+        const keyMap = {
+          "1": 0, "2": 1, "3": 2, "4": 3, "5": 4,
+          "6": 5, "7": 6, "8": 7, "9": 8,
+          "q": 9, "w": 10, "e": 11, "r": 12,
+          "t": 13, "y": 14, "u": 15, "i": 16, "o": 17
+        };
+        if (key in keyMap) {
+          selectedCarIndex = keyMap[key];
+          updateCarSelection();
+        }
+        return;
+      }
+
+      // 조작키
+      switch (key) {
         case "d": keys.forward = true; break;
         case "a": keys.backward = true; break;
         case "w": keys.left = true; break;
@@ -60,47 +106,54 @@
     });
 
     function update() {
-      if (velocity !== 0) {
-        if (keys.left) angle -= turnSpeed;
-        if (keys.right) angle += turnSpeed;
-      }
+      cars.forEach((car, index) => {
+        const el = car.el;
 
-      if (keys.forward) {
-        velocity += acceleration;
-        isReversed = false;
-      } else if (keys.backward) {
-        velocity -= acceleration;
-        isReversed = true;
-      } else {
-        if (velocity > 0) velocity = Math.max(0, velocity - friction);
-        if (velocity < 0) velocity = Math.min(0, velocity + friction);
-      }
+        const acceleration = 0.1;
+        const friction = 0.05;
+        const turnSpeed = 2;
+        const maxSpeed = 5;
 
-      velocity = Math.max(-maxSpeed, Math.min(maxSpeed, velocity));
+        if (index === selectedCarIndex) {
+          if (car.velocity !== 0) {
+            if (keys.left) car.angle -= turnSpeed;
+            if (keys.right) car.angle += turnSpeed;
+          }
 
-      const radians = angle * (Math.PI / 180);
-      let nextX = x + Math.cos(radians) * velocity;
-      let nextY = y + Math.sin(radians) * velocity;
+          if (keys.forward) {
+            car.velocity += acceleration;
+            car.isReversed = false;
+          } else if (keys.backward) {
+            car.velocity -= acceleration;
+            car.isReversed = true;
+          } else {
+            if (car.velocity > 0) car.velocity = Math.max(0, car.velocity - friction);
+            if (car.velocity < 0) car.velocity = Math.min(0, car.velocity + friction);
+          }
 
-      const halfWidth = carWidth / 2;
-      const halfHeight = carHeight / 2;
+          car.velocity = Math.max(-maxSpeed, Math.min(maxSpeed, car.velocity));
+        }
 
-      // 여유를 준 경계 설정 (1980x1080 기준)
-      const padding = 20;
-      const minX = halfWidth + padding;
-      const maxX = 1920 - halfWidth - padding;
-      const minY = halfHeight + padding;
-      const maxY = 1080 - halfHeight - padding;
+        const radians = car.angle * (Math.PI / 180);
+        const nextX = car.x + Math.cos(radians) * car.velocity;
+        const nextY = car.y + Math.sin(radians) * car.velocity;
 
-      // 경계 안에 있을 때만 이동
-      if (nextX >= minX && nextX <= maxX) x = nextX;
-      if (nextY >= minY && nextY <= maxY) y = nextY;
+        const halfW = carWidth / 2;
+        const halfH = carHeight / 2;
+        const minX = halfW + padding;
+        const maxX = screenWidth - halfW - padding;
+        const minY = halfH + padding;
+        const maxY = screenHeight - halfH - padding;
 
-      const flip = isReversed ? -1 : 1;
+        if (nextX >= minX && nextX <= maxX) car.x = nextX;
+        if (nextY >= minY && nextY <= maxY) car.y = nextY;
 
-      car.style.left = `${x - halfWidth}px`;
-      car.style.top = `${y - halfHeight}px`;
-      car.style.transform = `rotate(${angle}deg) scaleX(${flip})`;
+        const flip = car.isReversed ? -1 : 1;
+
+        el.style.left = `${car.x - halfW}px`;
+        el.style.top = `${car.y - halfH}px`;
+        el.style.transform = `rotate(${car.angle}deg) scaleX(${flip})`;
+      });
 
       requestAnimationFrame(update);
     }
