--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       position: absolute;
       transform-origin: center center;
       transition: transform 0.1s linear;
+      cursor: pointer;
+      border: 2px solid transparent;
+    }
+
+    .selected {
+      border-color: red;
     }
 
     #info {
@@ -27,11 +33,12 @@
       padding: 8px 12px;
       border-radius: 8px;
       font-family: sans-serif;
+      z-index: 999;
     }
   </style>
 </head>
 <body>
-  <div id="info">선택된 자동차: 1번 (Shift+숫자키로 변경)</div>
+  <div id="info">선택된 자동차: A (Shift+알파벳 또는 마우스 클릭)</div>
 
   <script>
     const carCount = 18;
@@ -43,6 +50,12 @@
 
     const cars = [];
     let currentPlayerIndex = 0;
+
+    const info = document.getElementById("info");
+
+    function updateInfo(index) {
+      info.innerText = `선택된 자동차: ${String.fromCharCode(65 + index)} (Shift+알파벳 또는 마우스 클릭)`;
+    }
 
     for (let i = 0; i < carCount; i++) {
       const car = document.createElement("img");
@@ -59,6 +72,14 @@
 
       document.body.appendChild(car);
 
+      // 마우스 클릭으로 선택
+      car.addEventListener("click", () => {
+        cars[currentPlayerIndex].el.classList.remove("selected");
+        currentPlayerIndex = i;
+        car.classList.add("selected");
+        updateInfo(i);
+      });
+
       cars.push({
         el: car,
         x: x,
@@ -69,6 +90,9 @@
       });
     }
 
+    cars[currentPlayerIndex].el.classList.add("selected");
+    updateInfo(currentPlayerIndex);
+
     const keys = {
       forward: false,
       backward: false,
@@ -78,14 +102,15 @@
 
     document.addEventListener("keydown", (e) => {
       const k = e.key.toLowerCase();
-      if (e.shiftKey) {
-        const numberKey = parseInt(e.key);
-        if (!isNaN(numberKey)) {
-          const idx = numberKey === 0 ? 9 : numberKey - 1;
-          if (idx < cars.length) {
-            currentPlayerIndex = idx;
-            document.getElementById("info").innerText = `선택된 자동차: ${idx + 1}번 (Shift+숫자키로 변경)`;
-          }
+
+      // 자동차 선택: Shift + 알파벳 (A~R)
+      if (e.shiftKey && /^[a-r]$/.test(k)) {
+        const idx = k.charCodeAt(0) - 97; // 'a' = 97
+        if (idx < cars.length) {
+          cars[currentPlayerIndex].el.classList.remove("selected");
+          currentPlayerIndex = idx;
+          cars[currentPlayerIndex].el.classList.add("selected");
+          updateInfo(idx);
         }
       } else {
         if (k === "w") keys.left = true;
@@ -134,12 +159,12 @@
       // 속도 제한
       car.velocity = Math.max(-maxSpeed, Math.min(maxSpeed, car.velocity));
 
-      // 위치 계산
+      // 이동
       const rad = car.angle * (Math.PI / 180);
       car.x += Math.cos(rad) * car.velocity;
       car.y += Math.sin(rad) * car.velocity;
 
-      // 경계 제한
+      // 화면 경계 제한
       const margin = 20;
       const carW = 80, carH = 40;
       car.x = Math.max(margin, Math.min(screenWidth - carW - margin, car.x));
