--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     }
 
     .car {
-      width: 180px;
+      width: 280px;
       height: 200px;
       position: absolute;
       transform-origin: center center;
@@ -36,58 +36,48 @@
       z-index: 999;
     }
 
-    #touch-pad {
+    .touch-controls {
       position: fixed;
-      bottom: 20px;
       right: 20px;
-      z-index: 1000;
-      display: flex;
-      flex-direction: column;
-      gap: 5px;
+      bottom: 20px;
+      display: grid;
+      grid-template-columns: repeat(3, 50px);
+      grid-gap: 5px;
+      z-index: 999;
     }
 
-    #touch-pad .row {
-      display: flex;
-      gap: 5px;
-    }
-
-    #touch-pad button {
+    .btn {
       width: 50px;
       height: 50px;
-      font-size: 18px;
-      font-weight: bold;
-      border-radius: 8px;
-      border: none;
-      background: #ddd;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+      background-color: #ddd;
+      border: 1px solid #aaa;
+      border-radius: 6px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 20px;
+      user-select: none;
       cursor: pointer;
     }
 
-    #touch-pad button:active {
-      background: #bbb;
+    .btn:active {
+      background-color: #bbb;
     }
   </style>
 </head>
 <body>
   <div id="info">선택된 자동차: A (Shift+알파벳 또는 마우스 클릭)</div>
 
-  <!-- 터치패드 -->
-  <div id="touch-pad">
-    <div class="row">
-      <button data-key="q">↖</button>
-      <button data-key="w">↑</button>
-      <button data-key="e">↗</button>
-    </div>
-    <div class="row">
-      <button data-key="a">←</button>
-      <button data-key="s">↻</button>
-      <button data-key="d">→</button>
-    </div>
-    <div class="row">
-      <button data-key="z">↙</button>
-      <button data-key="x">↓</button>
-      <button data-key="c">↘</button>
-    </div>
+  <div class="touch-controls">
+    <div class="btn" data-dir="q">↖</div>
+    <div class="btn" data-dir="w">↑</div>
+    <div class="btn" data-dir="e">↗</div>
+    <div class="btn" data-dir="a">←</div>
+    <div class="btn" data-dir="s">⟳</div>
+    <div class="btn" data-dir="d">→</div>
+    <div class="btn" data-dir="z">↙</div>
+    <div class="btn" data-dir="x">↓</div>
+    <div class="btn" data-dir="c">↘</div>
   </div>
 
   <script>
@@ -100,7 +90,6 @@
 
     const cars = [];
     let currentPlayerIndex = 0;
-
     const info = document.getElementById("info");
 
     function updateInfo(index) {
@@ -155,6 +144,15 @@
 
     let currentDirection = null;
 
+    function handleInput(dir) {
+      if (dir === 's') {
+        const car = cars[currentPlayerIndex];
+        car.angle = (car.angle + 90) % 360;
+      } else {
+        currentDirection = dir;
+      }
+    }
+
     document.addEventListener("keydown", (e) => {
       const k = e.key.toLowerCase();
 
@@ -169,13 +167,8 @@
         return;
       }
 
-      if (directions[k]) {
-        currentDirection = k;
-      }
-
-      if (k === 's') {
-        const car = cars[currentPlayerIndex];
-        car.angle = (car.angle + 90) % 360;
+      if (directions[k] || k === 's') {
+        handleInput(k);
       }
     });
 
@@ -186,10 +179,34 @@
       }
     });
 
+    // 터치 및 마우스 이벤트 바인딩
+    document.querySelectorAll(".btn").forEach(btn => {
+      const dir = btn.dataset.dir;
+
+      const downHandler = () => handleInput(dir);
+      const upHandler = () => {
+        if (currentDirection === dir) currentDirection = null;
+      };
+
+      btn.addEventListener("mousedown", downHandler);
+      btn.addEventListener("mouseup", upHandler);
+      btn.addEventListener("mouseleave", upHandler);
+
+      btn.addEventListener("touchstart", (e) => {
+        e.preventDefault();
+        downHandler();
+      }, { passive: false });
+
+      btn.addEventListener("touchend", (e) => {
+        e.preventDefault();
+        upHandler();
+      });
+    });
+
     const speed = 2.5;
     const screenWidth = 1920;
     const screenHeight = 1080;
-    const carW = 180, carH = 200;
+    const carW = 80, carH = 40;
     const margin = 20;
 
     function update() {
@@ -218,37 +235,6 @@
     }
 
     update();
-
-    // 터치 패드 입력 처리
-    const touchPadButtons = document.querySelectorAll('#touch-pad button');
-    let touchInterval = null;
-
-    touchPadButtons.forEach(button => {
-      const key = button.dataset.key;
-
-      button.addEventListener('touchstart', (e) => {
-        e.preventDefault();
-
-        if (key === 's') {
-          const car = cars[currentPlayerIndex];
-          car.angle = (car.angle + 90) % 360;
-        } else if (directions[key]) {
-          currentDirection = key;
-        }
-
-        if (key !== 's') {
-          touchInterval = setInterval(() => {
-            currentDirection = key;
-          }, 100);
-        }
-      });
-
-      button.addEventListener('touchend', (e) => {
-        e.preventDefault();
-        currentDirection = null;
-        clearInterval(touchInterval);
-      });
-    });
   </script>
 </body>
 </html>
