--- a/index.html
+++ b/index.html
@@ -1,240 +1,70 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <title>자동차 제어</title>
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-      background-color: #f0f0f0;
-    }
+const aiCarCount = 3;
+const totalCarCount = carCount + aiCarCount;
 
-    .car {
-      width: 180px;
-      height: 100px;
-      position: absolute;
-      transform-origin: center center;
-      transition: transform 0.1s linear;
-      cursor: pointer;
-      border: 2px solid transparent;
-    }
+// 기존 carCount → totalCarCount로 변경
+for (let i = 0; i < totalCarCount; i++) {
+  const car = document.createElement("img");
+  if (i < carCount) {
+    car.src = `car${i + 1}.png`;
+  } else {
+    car.src = `car_ai.png`;  // AI 자동차 이미지 준비 필요
+  }
+  car.className = "car";
 
-    .selected {
-      border-color: red;
-    }
+  const row = Math.floor(i / carsPerRow);
+  const col = i % carsPerRow;
+  const x = startX + col * spacingX;
+  const y = startY + row * spacingY;
 
-    #info {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      background: rgba(0,0,0,0.5);
-      color: white;
-      padding: 8px 12px;
-      border-radius: 8px;
-      font-family: sans-serif;
-      z-index: 999;
-    }
+  car.style.left = `${x}px`;
+  car.style.top = `${y}px`;
 
-    .touch-controls {
-      position: fixed;
-      right: 20px;
-      bottom: 20px;
-      display: grid;
-      grid-template-columns: repeat(3, 50px);
-      grid-gap: 5px;
-      z-index: 999;
-    }
+  document.body.appendChild(car);
 
-    .btn {
-      width: 50px;
-      height: 50px;
-      background-color: #ddd;
-      border: 1px solid #aaa;
-      border-radius: 6px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 20px;
-      user-select: none;
-      cursor: pointer;
-    }
-
-    .btn:active {
-      background-color: #bbb;
-    }
-  </style>
-</head>
-<body>
-  <div id="info">선택된 자동차: A (Shift+알파벳 또는 마우스 클릭)</div>
-
-  <div class="touch-controls">
-    <div class="btn" data-dir="q">↖</div>
-    <div class="btn" data-dir="w">↑</div>
-    <div class="btn" data-dir="e">↗</div>
-    <div class="btn" data-dir="a">←</div>
-    <div class="btn" data-dir="s">⟳</div>
-    <div class="btn" data-dir="d">→</div>
-    <div class="btn" data-dir="z">↙</div>
-    <div class="btn" data-dir="x">↓</div>
-    <div class="btn" data-dir="c">↘</div>
-  </div>
-
-  <script>
-    const carCount = 18;
-    const carsPerRow = 6;
-    const spacingX = 160;
-    const spacingY = 120;
-    const startX = 100;
-    const startY = 100;
-
-    const cars = [];
-    let currentPlayerIndex = 0;
-    const info = document.getElementById("info");
-
-    function updateInfo(index) {
-      info.innerText = `선택된 자동차: ${String.fromCharCode(65 + index)} (Shift+알파벳 또는 마우스 클릭)`;
-    }
-
-    for (let i = 0; i < carCount; i++) {
-      const car = document.createElement("img");
-      car.src = `car${i + 1}.png`;
-      car.className = "car";
-
-      const row = Math.floor(i / carsPerRow);
-      const col = i % carsPerRow;
-      const x = startX + col * spacingX;
-      const y = startY + row * spacingY;
-
-      car.style.left = `${x}px`;
-      car.style.top = `${y}px`;
-
-      document.body.appendChild(car);
-
-      car.addEventListener("click", () => {
-        cars[currentPlayerIndex].el.classList.remove("selected");
-        currentPlayerIndex = i;
-        car.classList.add("selected");
-        updateInfo(i);
-      });
-
-      cars.push({
-        el: car,
-        x: x,
-        y: y,
-        angle: 0,
-        vx: 0,
-        vy: 0
-      });
-    }
-
-    cars[currentPlayerIndex].el.classList.add("selected");
-    updateInfo(currentPlayerIndex);
-
-    const directions = {
-      q: { vx: -1, vy: -1 },
-      w: { vx:  0, vy: -1 },
-      e: { vx:  1, vy: -1 },
-      a: { vx: -1, vy:  0 },
-      d: { vx:  1, vy:  0 },
-      z: { vx: -1, vy:  1 },
-      x: { vx:  0, vy:  1 },
-      c: { vx:  1, vy:  1 }
-    };
-
-    let currentDirection = null;
-
-    function handleInput(dir) {
-      if (dir === 's') {
-        const car = cars[currentPlayerIndex];
-        car.angle = (car.angle + 90) % 360;
-      } else {
-        currentDirection = dir;
-      }
-    }
-
-    document.addEventListener("keydown", (e) => {
-      const k = e.key.toLowerCase();
-
-      if (e.shiftKey && /^[a-r]$/.test(k)) {
-        const idx = k.charCodeAt(0) - 97;
-        if (idx < cars.length) {
-          cars[currentPlayerIndex].el.classList.remove("selected");
-          currentPlayerIndex = idx;
-          cars[currentPlayerIndex].el.classList.add("selected");
-          updateInfo(idx);
-        }
-        return;
-      }
-
-      if (directions[k] || k === 's') {
-        handleInput(k);
-      }
+  // 클릭 이벤트는 플레이어용 자동차에만
+  if (i < carCount) {
+    car.addEventListener("click", () => {
+      cars[currentPlayerIndex].el.classList.remove("selected");
+      currentPlayerIndex = i;
+      car.classList.add("selected");
+      updateInfo(i);
     });
+  }
 
-    document.addEventListener("keyup", (e) => {
-      const k = e.key.toLowerCase();
-      if (currentDirection === k) {
-        currentDirection = null;
-      }
-    });
+  cars.push({
+    el: car,
+    x: x,
+    y: y,
+    angle: 0,
+    vx: 0,
+    vy: 0,
+    isAI: i >= carCount  // AI 자동차 여부
+  });
+}
 
-    // 터치 및 마우스 이벤트 바인딩
-    document.querySelectorAll(".btn").forEach(btn => {
-      const dir = btn.dataset.dir;
-
-      const downHandler = () => handleInput(dir);
-      const upHandler = () => {
-        if (currentDirection === dir) currentDirection = null;
-      };
-
-      btn.addEventListener("mousedown", downHandler);
-      btn.addEventListener("mouseup", upHandler);
-      btn.addEventListener("mouseleave", upHandler);
-
-      btn.addEventListener("touchstart", (e) => {
-        e.preventDefault();
-        downHandler();
-      }, { passive: false });
-
-      btn.addEventListener("touchend", (e) => {
-        e.preventDefault();
-        upHandler();
-      });
-    });
-
-    const speed = 2.5;
-    const screenWidth = 1920;
-    const screenHeight = 1080;
-    const carW = 80, carH = 40;
-    const margin = 20;
-
-    function update() {
-      const car = cars[currentPlayerIndex];
-
-      if (currentDirection && directions[currentDirection]) {
-        const dir = directions[currentDirection];
+// AI 자동차 이동 로직
+setInterval(() => {
+  cars.forEach(car => {
+    if (car.isAI) {
+      // 랜덤 방향 변경 (30% 확률)
+      if (Math.random() < 0.3) {
+        const dirKeys = Object.keys(directions);
+        const randomDir = dirKeys[Math.floor(Math.random() * dirKeys.length)];
+        const dir = directions[randomDir];
         car.vx = dir.vx * speed;
         car.vy = dir.vy * speed;
-      } else {
-        car.vx = 0;
-        car.vy = 0;
       }
 
+      // 이동
       car.x += car.vx;
       car.y += car.vy;
 
-      car.x = Math.max(margin, Math.min(screenWidth - carW - margin, car.x));
-      car.y = Math.max(margin, Math.min(screenHeight - carH - margin, car.y));
+      // 화면 경계 체크
+      if (car.x < margin || car.x > screenWidth - carW - margin) car.vx *= -1;
+      if (car.y < margin || car.y > screenHeight - carH - margin) car.vy *= -1;
 
       car.el.style.left = `${car.x}px`;
       car.el.style.top = `${car.y}px`;
-      car.el.style.transform = `rotate(${car.angle}deg)`;
-
-      requestAnimationFrame(update);
     }
-
-    update();
-  </script>
-</body>
-</html>
+  });
+}, 100);  // AI 자동차 갱신 주기 (0.1초)
