--- a/index.html
+++ b/index.html
@@ -1,70 +1,84 @@
-const aiCarCount = 3;
-const totalCarCount = carCount + aiCarCount;
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Car Control Game</title>
+  <style>
+    /* 스타일 필요한 경우 여기에 */
+  </style>
+</head>
+<body>
+  <!-- 자동차 이미지 같은 요소가 여기 들어감 -->
 
-// 기존 carCount → totalCarCount로 변경
-for (let i = 0; i < totalCarCount; i++) {
-  const car = document.createElement("img");
-  if (i < carCount) {
-    car.src = `car${i + 1}.png`;
-  } else {
-    car.src = `car_ai.png`;  // AI 자동차 이미지 준비 필요
-  }
-  car.className = "car";
+  <script type="text/javascript">
+    // 지금 작성한 자바스크립트 코드를 여기에 넣으면 됨!
+    const aiCarCount = 3;
+    const totalCarCount = carCount + aiCarCount;
+    
+    for (let i = 0; i < totalCarCount; i++) {
+      const car = document.createElement("img");
+      if (i < carCount) {
+        car.src = `car${i + 1}.png`;
+      } else {
+        car.src = `car_ai.png`;
+      }
+      car.className = "car";
 
-  const row = Math.floor(i / carsPerRow);
-  const col = i % carsPerRow;
-  const x = startX + col * spacingX;
-  const y = startY + row * spacingY;
+      // 위치 계산
+      const row = Math.floor(i / carsPerRow);
+      const col = i % carsPerRow;
+      const x = startX + col * spacingX;
+      const y = startY + row * spacingY;
 
-  car.style.left = `${x}px`;
-  car.style.top = `${y}px`;
+      car.style.left = `${x}px`;
+      car.style.top = `${y}px`;
+      document.body.appendChild(car);
 
-  document.body.appendChild(car);
-
-  // 클릭 이벤트는 플레이어용 자동차에만
-  if (i < carCount) {
-    car.addEventListener("click", () => {
-      cars[currentPlayerIndex].el.classList.remove("selected");
-      currentPlayerIndex = i;
-      car.classList.add("selected");
-      updateInfo(i);
-    });
-  }
-
-  cars.push({
-    el: car,
-    x: x,
-    y: y,
-    angle: 0,
-    vx: 0,
-    vy: 0,
-    isAI: i >= carCount  // AI 자동차 여부
-  });
-}
-
-// AI 자동차 이동 로직
-setInterval(() => {
-  cars.forEach(car => {
-    if (car.isAI) {
-      // 랜덤 방향 변경 (30% 확률)
-      if (Math.random() < 0.3) {
-        const dirKeys = Object.keys(directions);
-        const randomDir = dirKeys[Math.floor(Math.random() * dirKeys.length)];
-        const dir = directions[randomDir];
-        car.vx = dir.vx * speed;
-        car.vy = dir.vy * speed;
+      // 클릭 이벤트는 플레이어용만
+      if (i < carCount) {
+        car.addEventListener("click", () => {
+          cars[currentPlayerIndex].el.classList.remove("selected");
+          currentPlayerIndex = i;
+          car.classList.add("selected");
+          updateInfo();
+        });
       }
 
-      // 이동
-      car.x += car.vx;
-      car.y += car.vy;
-
-      // 화면 경계 체크
-      if (car.x < margin || car.x > screenWidth - carW - margin) car.vx *= -1;
-      if (car.y < margin || car.y > screenHeight - carH - margin) car.vy *= -1;
-
-      car.el.style.left = `${car.x}px`;
-      car.el.style.top = `${car.y}px`;
+      // 자동차 배열에 추가
+      cars.push({
+        el: car,
+        x: x, y: y,
+        angle: 0,
+        vx: 0, vy: 0,
+        isAI: i >= carCount
+      });
     }
-  });
-}, 100);  // AI 자동차 갱신 주기 (0.1초)
+
+    // AI 자동차 이동 로직
+    setInterval(() => {
+      cars.forEach(car => {
+        if (car.isAI) {
+          if (Math.random() < 0.3) {
+            const dirKeys = Object.keys(directions);
+            const randomDir = dirKeys[Math.floor(Math.random() * dirKeys.length)];
+            const dir = directions[randomDir];
+            car.vx = dir.vx * speed;
+            car.vy = dir.vy * speed;
+          }
+
+          // 이동
+          car.x += car.vx;
+          car.y += car.vy;
+
+          // 화면 경계 체크
+          if (car.x < margin || car.x > screenWidth - carW - margin) car.vx *= -1;
+          if (car.y < margin || car.y > screenHeight - carH - margin) car.vy *= -1;
+
+          car.el.style.left = `${car.x}px`;
+          car.el.style.top = `${car.y}px`;
+        }
+      });
+    }, 100);
+  </script>
+</body>
+</html>
